--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "debug",
             "program": "${workspaceFolder}",
             "args": [
-                "youtube", "Generated Broadcast", "2021-04-01", "18:45",
+                "schedule", "New Broadcast", "2021-04-01", "18:45",
                 "--debug",
                 "--auto-start",
                 "--auto-stop",
