login cmd worked

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
             "mode": "debug",
             "program": "${workspaceFolder}",
             "args": [
-                "schedule", "New Broadcast", "2021-04-01", "18:45",
-                "--debug",
+                "schedule", "New Broadcast", "2021-05-01", "18:45",
+                // "--debug",
                 "--auto-start",
                 "--auto-stop",
                 "--dvr=false",
